+reloadBkmks() !manifest.json for FF 55.0
test locales and options

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -11,7 +11,7 @@
     <link href="../lib/skin-lion/ui.fancytree.min.css" rel="stylesheet">
     <script src="../lib/jquery.fancytree-all.min.js"></script>
 
-    <script type="text/javascript" src=">>/script/f.js"></script>
+    <script type="text/javascript" src="../script/f.js"></script>
     <script type="text/javascript" src="popup.js"></script>
   </head>
   <body>
