--- a/background.html
+++ b/background.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+	<meta charset="utf-8">
   <title>GBE2</title>
   <script type="text/javascript" src="lib/jquery-3.2.1.min.js"></script>
   <script type="text/javascript" src="script/f.js"></script>
