Squashed commit of the following:
commit e2d2e528206fc74d0ed3c2b5f486c87153c923a7
Author: fess16 <fess61@gmail.com>
Date:   Thu Jun 15 09:46:59 2017 +0300

    test locales and options

Conflicts:
	manifest.json
	options/options.html
	script/background.js

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -37,25 +37,27 @@
           <div class="GBE-filterHBox-clear"></div>
       </div>
       <hr>
-
-      <div class="GBE-info-box">
-        <img class="GBE-info-image" src="../images/ajax-loader.gif">
-        <img class="GBE-error-image" src="../images/warning.png">
-        <label class="GBE-info-label"></label>
       </div>
-
+      <div class="GBE-info-box">
+        <img src="../images/ajax-loader.gif">
+        <label></label>
+      </div>
+      <div class="GBE-error-box">
+        <img src="../images/warning.png">
+        <label></label>
+      </div>
+ <!--      <div id="wrap"> -->
       <div id="GBE-bkm-tree"></div>
-
+<!--       </div> -->
     </div>
-
-
 
     
 
+<!-- 
     <p>I am popup.html</p>
     <button id="btn">hello</button>
     <br>msg from background.js: 
-    <div id="div"></div>
+    <div id="div"></div> -->
 
   </body>
 </html>
