--- a/popup/popup.html
+++ b/popup/popup.html
@@ -51,11 +51,11 @@
       <div id="bkm-tree"></div>
 <!--       </div> -->
     </div>
-      <div id="editBkmkDialog" title="!Редактирование закладки" class="dialog">
-        <label for="editBkmkDialog-name">!Название:</label><br/>
+      <div id="editBkmkDialog" title="Редактирование закладки" class="dialog">
+        <label for="editBkmkDialog-name">Название:</label><br/>
         <input type="text" name="editBkmkDialog-name" id="editBkmkDialog-name"><br/>
         <span>
-        <label for="editBkmkDialog-url">!URL:</label><!-- <br/> -->
+        <label for="editBkmkDialog-url">URL:</label><!-- <br/> -->
           <input id="editBkmkDialog-enableUrlEdit" type="checkbox"><!-- <br/> -->
         </span>
           <input type="text" name="editBkmkDialog-url" id="editBkmkDialog-url">
@@ -64,6 +64,9 @@
         <label for="editBkmkDialog-notes">!Заметки:</label><br/>
         <textarea rows="3" name="editBkmkDialog-notes" id="editBkmkDialog-notes"></textarea> 
 
+      </div>
+      <div id="delBkmkDialog" class="dialog">
+        <label></label>
       </div>
 <!-- 
     <p>I am popup.html</p>
