--- a/popup/popup.html
+++ b/popup/popup.html
@@ -66,7 +66,7 @@
 
       </div>
       <div id="delBkmkDialog" class="dialog">
-        <label></label>
+        <label>!Вы действительно хотите удалить закладку?</label>
       </div>
 <!-- 
     <p>I am popup.html</p>
