--- a/popup/popup.html
+++ b/popup/popup.html
@@ -11,6 +11,9 @@
     <link href="../lib/skin-lion/ui.fancytree.min.css" rel="stylesheet">
     <script src="../lib/jquery.fancytree-all.min.js"></script>
 
+    <script src="../lib/jquery.ui-contextmenu.min.js"></script>
+       
+
     <script type="text/javascript" src="../script/f.js"></script>
     <script type="text/javascript" src="popup.js"></script>
   </head>
@@ -48,7 +51,7 @@
         <label></label>
       </div>
  <!--      <div id="wrap"> -->
-      <div id="bkm-tree"></div>
+      <div id="bkmk-tree"></div>
 <!--       </div> -->
     </div>
       <div id="editBkmkDialog" title="Редактирование закладки" class="dialog">
