--- a/popup/popup.html
+++ b/popup/popup.html
@@ -79,7 +79,7 @@
 
       <!-- edit label dialog -->
       <div id="editLblDlg" class="dialog">
-        <input type="hidden" name="editLblDlg-id" id="editLblDlg-id" value="">
+        <input type="hidden" name="editLblDlg-oldName" id="editLblDlg-oldName" value="">
         <label for="editLblDlg-name">Название:</label><br/>
         <input type="text" name="editLblDlg-name" id="editLblDlg-name"><br/>
       </div>
