opt.enableLabelUnlabeled + labelMenuOpenAll + labelMenuAddHere

--- a/options/options.html
+++ b/options/options.html
@@ -26,6 +26,14 @@
           <div class="slider round"></div>
         </label>
       </div>
+      <div class="fRow">
+        <label for="enableLabelUnlabeled">enableLabelUnlabeled:</label>
+        <label class="switch">
+          <input id="enableLabelUnlabeled" type="checkbox">
+          <div class="slider round"></div>
+        </label>
+        <input type="text" name="labelUnlabeledName" id="labelUnlabeledName">
+      </div>
       <button type="submit">Save</button>
     </form>
   </body>
