+ enableFilterByUrl, enableFilterByNotes, filterDelay + searchLabelByPath() ! preparing m_treeSource + doRequestBookmarks - debug (load local bookmarks)

--- a/options/options.html
+++ b/options/options.html
@@ -93,6 +93,27 @@
             <label for="enableLabelUnlabeled">enableLabelUnlabeled:</label>
             <input type="text" name="labelUnlabeledName" id="labelUnlabeledName">
           </div>
+          <fieldset id="fsFilter">
+            <legend>Настройки фильтра</legend>
+            <div class="fRow">
+              <label class="switch">
+                <input id="enableFilterByUrl" type="checkbox">
+                <div class="slider round"></div>
+              </label>
+              <label for="enableFilterByUrl">enableFilterByUrl:</label>
+            </div>
+            <div class="fRow">
+              <label class="switch">
+                <input id="enableFilterByNotes" type="checkbox">
+                <div class="slider round"></div>
+              </label>
+              <label for="enableFilterByNotes">enableFilterByNotes:</label>
+            </div>
+            <div class="fRow">
+              <label for="filterDelay">enableLabelUnlabeled:</label>
+              <input type="text" name="filterDelay" id="filterDelay">
+            </div>
+          </fieldset>
 
         </div>
         <div id="iconsPanel">
