+ enableLabelHiding, showHiddenLabels, hiddenLabelsTitle options

--- a/options/options.html
+++ b/options/options.html
@@ -114,6 +114,27 @@
               <input type="text" name="filterDelay" id="filterDelay">
             </div>
           </fieldset>
+          <fieldset id="fsLabelHiding">
+            <legend>Скрытие меток</legend>
+            <div class="fRow">
+              <label class="switch">
+                <input id="enableLabelHiding" type="checkbox">
+                <div class="slider round"></div>
+              </label>
+              <label for="enableLabelHiding">enableLabelHiding:</label>
+            </div>
+            <div class="fRow">
+              <label class="switch">
+                <input id="showHiddenLabels" type="checkbox">
+                <div class="slider round"></div>
+              </label>
+              <label for="showHiddenLabels">showHiddenLabels:</label>
+            </div>
+            <div class="fRow">
+              <label for="hiddenLabelsTitle">hiddenLabelsTitle:</label>
+              <input type="text" name="hiddenLabelsTitle" id="hiddenLabelsTitle">
+            </div>
+          </fieldset>
 
         </div>
         <div id="iconsPanel">
