--- a/popup/popup.html
+++ b/popup/popup.html
@@ -97,6 +97,11 @@
         <a href=""><img id="qr_dialog_image"  src=""></a>
       </div>
 
+      <!-- confirmation dialog -->
+      <div id="confirmDlg" class="dialog">
+        <label id="confirmDlg-Info">!Вы действительно хотите удалить ?</label>
+      </div>
+
     </div>
   </body>
 </html>
