+ favicons (save to storage.local, clear, reload) ! "cntx-folder-*" to "cntx_folder_*" ! split options to settings && favicons ! link context menu - info.linkText

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -6,12 +6,12 @@
 
     <link rel="stylesheet" href="../lib/jquery-ui.min.css" type="text/css">
     <link rel="stylesheet" type="text/css" href="popup.css" />
+    <link href="../lib/skin-lion/ui.fancytree.min.css" rel="stylesheet">
     <script type="text/javascript" src="../lib/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="../lib/jquery-ui.min.js"></script>
-    <link href="../lib/skin-lion/ui.fancytree.min.css" rel="stylesheet">
-    <script src="../lib/jquery.fancytree-all.min.js"></script>
+    <script type="text/javascript" src="../lib/jquery.ui-contextmenu.min.js"></script>
+    <script type="text/javascript" src="../lib/jquery.fancytree-all.min.js"></script>
 
-    <script src="../lib/jquery.ui-contextmenu.min.js"></script>
        
 
     <script type="text/javascript" src="../script/f.js"></script>
@@ -66,6 +66,7 @@
       <div id="editBkmkDlg" title="Редактирование закладки" class="dialog">
         <input type="hidden" name="editBkmkDlg-id" id="editBkmkDlg-id" value="">
         <input type="hidden" name="editBkmkDlg-oldUrl" id="editBkmkDlg-oldUrl" value="">
+        <input type="hidden" name="editBkmkDlg-favIconUrl" id="editBkmkDlg-favIconUrl" value="">
         <label for="editBkmkDlg-name">Название:</label><br/>
         <input type="text" name="editBkmkDlg-name" id="editBkmkDlg-name"><br/>
         <span>
