--- a/options/options.html
+++ b/options/options.html
@@ -44,13 +44,6 @@
             <legend>Order a T-Shirt</legend>
             <div class="fRow">
               <label class="switch">
-                <input id="showFavicons" type="checkbox">
-                <div class="slider round"></div>
-              </label>
-              <label for="showFavicons">Показывать иконки сайтов</label>
-            </div>
-            <div class="fRow">
-              <label class="switch">
                 <input id="enableNotes" type="checkbox">
                 <div class="slider round"></div>
               </label>
@@ -76,6 +69,25 @@
                 <div class="slider round"></div>
               </label>
               <label for="showTagsInTooltip"></label>
+            </div>
+          </fieldset>
+
+          <fieldset id="fsFavIcons">
+            <legend>!FavIcons</legend>
+            <div class="fRow">
+              <label class="switch">
+                <input id="showFavicons" type="checkbox">
+                <div class="slider round"></div>
+              </label>
+              <label for="showFavicons">Показывать иконки сайтов</label>
+            </div>
+            <div class="fRow">
+            <label for="clrFavIcons">!Удалить сохраненные иконки</label>
+              <button id="clrFavIcons">!Clear facicons</button>
+            </div>
+            <div class="fRow">
+            <label for="reloadFavIcons">Принудительно получить иконки для закладок (через http://www.google.com/s2/favicons)</label>
+              <button id="reloadFavIcons">!Reload facicons</button>
             </div>
           </fieldset>
 
@@ -142,7 +154,7 @@
         </div>
       </div>
       <div id="buttons">
-        <button type="submit">Save</button>
+        <button id="save" type="submit">Save</button>
       </div>
     </form>
   </body>
