+ addAllTabsDlg ! fix label autocomplete

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -73,7 +73,7 @@
         <label for="editBkmkDlg-url">URL:</label><!-- <br/> -->
           <input id="editBkmkDlg-enableUrlEdit" type="checkbox"><!-- <br/> -->
         </span>
-          <input type="text" name="editBkmkDlg-url" id="editBkmkDlg-url">
+          <input type="url" name="editBkmkDlg-url" id="editBkmkDlg-url">
         <label for="editBkmkDlg-labels">!Метки:</label><br/>
         <input type="text" name="editBkmkDlg-labels" id="editBkmkDlg-labels"><br/>
         <label for="editBkmkDlg-notes">!Заметки:</label><br/>
@@ -110,6 +110,66 @@
       <div id="confirmDlg" class="dialog">
         <label id="confirmDlg-Info">!Вы действительно хотите удалить ?</label>
       </div>
+
+      <!-- add all tabs to bookmarks dialog -->
+      <div id="addAllTabsDlg" class="dialog">
+        <label for="addAllTabsDlg-label">!Метки:</label><br/>
+        <input type="text" name="addAllTabsDlg-label" id="addAllTabsDlg-label"><br/>
+        <div class="table-wraper">
+          <div class="divTable tabsList">
+            <div class="divTableHeading">
+              <div class="divTableRow">
+                <div class="divTableHead"><input id="addAllTabsDlg-headCheckBox" type="checkbox"></div>
+                <div class="divTableHead">!Title</div>
+                <div class="divTableHead">!Url</div>
+            </div>
+            </div>
+            <div class="divTableBody">
+              <div class="divTableRow">
+                <div class="divTableCell"><input type="checkbox"></div>
+                <div class="divTableCell">cell2_1</div>
+                <div class="divTableCell">cell3_1</div>
+              </div>
+              <div class="divTableRow">
+                <div class="divTableCell"><input type="checkbox"></div>
+                <div class="divTableCell">cell2_1</div>
+                <div class="divTableCell">cell3_1</div>
+              </div>
+              <div class="divTableRow">
+                <div class="divTableCell"><input type="checkbox"></div>
+                <div class="divTableCell">cell2_1</div>
+                <div class="divTableCell">cell3_1</div>
+              </div>
+              <div class="divTableRow">
+                <div class="divTableCell"><input type="checkbox"></div>
+                <div class="divTableCell">cell2_1</div>
+                <div class="divTableCell">cell3_1</div>
+              </div>
+              <div class="divTableRow">
+                <div class="divTableCell"><input type="checkbox"></div>
+                <div class="divTableCell">cell2_1</div>
+                <div class="divTableCell">cell3_1</div>
+              </div>
+              <div class="divTableRow">
+                <div class="divTableCell"><input type="checkbox"></div>
+                <div class="divTableCell">cell2_1</div>
+                <div class="divTableCell">cell3_1</div>
+              </div>
+              <div class="divTableRow">
+                <div class="divTableCell"><input type="checkbox"></div>
+                <div class="divTableCell">cell2_1</div>
+                <div class="divTableCell">cell3_1</div>
+              </div>
+              <div class="divTableRow">
+                <div class="divTableCell"><input type="checkbox"></div>
+                <div class="divTableCell">cell2_1</div>
+                <div class="divTableCell">cell3_1</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
 
     </div>
   </body>
