+* DnD (labels, moveBookmark) + menuAddAllTabs ! $("#bkmk-tree").on("click") - click afrer dragStart ! tabindex - manifest.json - remove content section

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -44,7 +44,7 @@
             <input type="text" name="filterTextbox" id="filterTextbox" value=""  placeholder="" tabindex="1"/>
           </span>
           <span>
-            <a class="clrBtn" tabindex="0"></a>
+            <a class="clrBtn" tabindex="1"></a>
           </span>
           <!-- <div class="filterHBox-clear"><a class="clrBtn" disabled="true"></a></div> -->
       </div>
@@ -59,7 +59,7 @@
         <label></label>
       </div>
  <!--      <div id="wrap"> -->
-      <div id="bkmk-tree" tabindex="2"></div>
+      <div id="bkmk-tree"></div>
 <!--       </div> -->
     </div>
       <!-- add/edit bookmark dialog -->
@@ -121,46 +121,11 @@
             <div class="divTableHeading">
               <div class="divTableRow">
                 <div class="divTableHead"><input id="addAllTabsDlg-headCheckBox" type="checkbox"></div>
-                <div class="divTableHead">!Title</div>
-                <div class="divTableHead">!Url</div>
+                <div class="divTableHead addAllTabsDlg_tblHeadTitle">!Title</div>
+                <div class="divTableHead addAllTabsDlg_tblHeadUrl">!Url</div>
             </div>
             </div>
             <div class="divTableBody">
-              <div class="divTableRow">
-                <div class="divTableCell"><input type="checkbox"></div>
-                <div class="divTableCell">cell2_1</div>
-                <div class="divTableCell">cell3_1</div>
-              </div>
-              <div class="divTableRow">
-                <div class="divTableCell"><input type="checkbox"></div>
-                <div class="divTableCell">cell2_1</div>
-                <div class="divTableCell">cell3_1</div>
-              </div>
-              <div class="divTableRow">
-                <div class="divTableCell"><input type="checkbox"></div>
-                <div class="divTableCell">cell2_1</div>
-                <div class="divTableCell">cell3_1</div>
-              </div>
-              <div class="divTableRow">
-                <div class="divTableCell"><input type="checkbox"></div>
-                <div class="divTableCell">cell2_1</div>
-                <div class="divTableCell">cell3_1</div>
-              </div>
-              <div class="divTableRow">
-                <div class="divTableCell"><input type="checkbox"></div>
-                <div class="divTableCell">cell2_1</div>
-                <div class="divTableCell">cell3_1</div>
-              </div>
-              <div class="divTableRow">
-                <div class="divTableCell"><input type="checkbox"></div>
-                <div class="divTableCell">cell2_1</div>
-                <div class="divTableCell">cell3_1</div>
-              </div>
-              <div class="divTableRow">
-                <div class="divTableCell"><input type="checkbox"></div>
-                <div class="divTableCell">cell2_1</div>
-                <div class="divTableCell">cell3_1</div>
-              </div>
               <div class="divTableRow">
                 <div class="divTableCell"><input type="checkbox"></div>
                 <div class="divTableCell">cell2_1</div>
