+ Read Later + doBuildTree() ! DnD bookmark - without reloading all bookmarks

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -24,6 +24,8 @@
         <ul class="nav-bar">
           <li class="hmenuRefresh"><a class="hmenuBtn" href="#"></a></li>
           <li class="hmenuEmpty"><a></a></li>
+          <li class="hmenuReadLater"><a class="hmenuBtn" href="#"></a></li>
+          <li class="hmenuEmpty"><a></a></li>
           <li class="hmenuAdd"><a class="hmenuBtn" href="#"></a></li>
           <li class="hmenuEdit"><a class="hmenuBtn" href="#"></a></li>
           <li class="hmenuDel"><a class="hmenuBtn" href="#"></a></li>
