--- a/options/options.html
+++ b/options/options.html
@@ -87,9 +87,17 @@
             </div>
             <div class="fRow">
             <label for="reloadFavIcons">Принудительно получить иконки для закладок (через http://www.google.com/s2/favicons)</label>
-              <button id="reloadFavIcons">!Reload facicons</button>
+              <button id="reloadFavIcons">Reload facicons</button>
             </div>
           </fieldset>
+          <div class="fRow">
+            <label for="readLaterTitle">readLaterTitle:</label>
+            <input type="text" id="readLaterTitle" name="readLaterTitle">
+          </div>
+          <div class="fRow">
+            <label for="timeout">timeout:</label>
+            <input type="text" id="timeout" name="timeout">
+          </div>
 
         </div>
         <div id="advPanel">
