--- a/popup/popup.html
+++ b/popup/popup.html
@@ -37,7 +37,7 @@
           <!-- <li class="hmenuFFbookmark"><a href="#"></a></li> -->
           <!-- <li class="menuAbout"><a href="#"></a></li> -->
           <!-- <li class="hmenuLgn"><a href="#">Login</a></li> -->
-          <!-- <li class="hmenuLgt"><a href="#">Logout</a></li> -->
+          <li class="hmenuLgt"><a class="hmenuBtn" href="#"></a></li>
         </ul>
       </nav>
       <div class="filterHBox">
