--- a/popup/popup.html
+++ b/popup/popup.html
@@ -53,12 +53,12 @@
       <hr>
 <!--       </div> -->
       <div class="info-box">
-        <img src="../images/ajax-loader.gif">
-        <label></label>
+        <div><img src="../images/ajax-loader.gif"></div>
+        <div><label></label></div>
       </div>
       <div class="error-box">
-        <img src="../images/warning.png">
-        <label></label>
+        <div><img src="../images/warning.png"></div>
+        <div><label></label></div>
       </div>
  <!--      <div id="wrap"> -->
       <div id="bkmk-tree"></div>
