--- a/options/options.html
+++ b/options/options.html
@@ -163,6 +163,7 @@
       </div>
       <div id="buttons">
         <button id="save" type="submit">Save</button>
+        <span>Saved</span>
       </div>
     </form>
   </body>
