+ label suggestion for new bookmarks ! reloadBkmks() - reset arrays (bookmarks, labels, tree)

--- a/options/options.html
+++ b/options/options.html
@@ -113,6 +113,13 @@
             <label for="enableLabelUnlabeled">enableLabelUnlabeled:</label>
             <input type="text" name="labelUnlabeledName" id="labelUnlabeledName">
           </div>
+          <div class="fRow">
+            <label class="switch">
+              <input id="suggestLabel" type="checkbox">
+              <div class="slider round"></div>
+            </label>
+            <label for="suggestLabel"></label>
+          </div>
           <fieldset id="fsFilter">
             <legend>Настройки фильтра</legend>
             <div class="fRow">
