+ options_loadOnStart ! css width

--- a/options/options.html
+++ b/options/options.html
@@ -24,6 +24,13 @@
         <div id="mainPanel">
           <div class="fRow">
             <label class="switch">
+              <input id="loadOnStart" type="checkbox">
+              <div class="slider round"></div>
+            </label>
+            <label for="loadOnStart">loadOnStart</label>
+          </div>
+          <div class="fRow">
+            <label class="switch">
               <input id="reverseLeftClick" type="checkbox">
               <div class="slider round"></div>
             </label>
